# serializer version: 1
# name: TestCausalOrderingOutputs.test_rf_regressor_copula_causal_asymmetric_confounding
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.126    |  -0.064478 |  -0.087624 |    0.005849 |    -0.020396 |  -0.05836  |  -0.130071 |   -0.036716 |
      |  2 |            2 | 2.20594 | -0.632516 |  -0.053307 |  -0.332285 |   -0.006989 |    -0.025316 |  -0.025803 |  -0.125883 |   -0.027008 |
      |  3 |            3 | 2.20594 | -0.288498 |   0.448924 |   0.24123  |   -0.032258 |     0.052113 |   1.32248  |   0.055519 |    0.147656 |
      |  4 |            4 | 2.20594 |  0.672771 |  -0.181867 |   0.01917  |    0.030661 |     0.004729 |  -0.154717 |   0.061832 |    0.024742 |
      |  5 |            5 | 2.20594 |  0.105626 |  -0.104451 |  -0.012805 |    0.029727 |     0.053555 |   0.067402 |  -0.013175 |    0.008263 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.000573 |   0.002404 |   0.002518 |    0.001815 |     0.005129 |   0.002068 |   0.002411 |    0.005181 |
      |  2 |            2 |      0 | 0.00037  |   0.001722 |   0.001626 |    0.002849 |     0.003215 |   0.002466 |   0.003429 |    0.003315 |
      |  3 |            3 |      0 | 0.002896 |   0.013791 |   0.012732 |    0.011355 |     0.018396 |   0.016103 |   0.01123  |    0.01351  |
      |  4 |            4 |      0 | 0.000464 |   0.002268 |   0.002039 |    0.001102 |     0.002377 |   0.001346 |   0.001442 |    0.001952 |
      |  5 |            5 |      0 | 0.001193 |   0.005341 |   0.005244 |    0.002075 |     0.004172 |   0.003276 |   0.001966 |    0.003677 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_ctree_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.948319 |   0.05185  |  -0.287684 |   -0.0866   |    -0.034557 |  -0.195393 |  -0.36086  |    0.343765 |
      |  2 |            2 | 2.20594 | -0.366948 |  -0.006291 |  -0.503678 |    0.020885 |    -0.003139 |  -0.044191 |  -0.112869 |   -0.212877 |
      |  3 |            3 | 2.20594 |  0.376875 |   0.657434 |  -0.002444 |   -0.006484 |    -0.059767 |   0.826349 |  -0.005228 |    0.160433 |
      |  4 |            4 | 2.20594 |  0.187932 |  -0.120647 |   0.254612 |    0.015121 |    -0.077986 |  -0.193072 |   0.08305  |    0.328312 |
      |  5 |            5 | 2.20594 |  0.339671 |   0.026453 |  -0.227112 |    0.006098 |     0.008067 |   0.137527 |  -0.416485 |    0.259924 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.057147 |   0.056511 |   0.057892 |    0.081205 |     0.048192 |   0.095447 |   0.110833 |    0.07565  |
      |  2 |            2 |      0 | 0.052043 |   0.061648 |   0.061983 |    0.05197  |     0.047134 |   0.047564 |   0.147082 |    0.068782 |
      |  3 |            3 |      0 | 0.052208 |   0.066924 |   0.045199 |    0.066519 |     0.051898 |   0.049494 |   0.101617 |    0.064322 |
      |  4 |            4 |      0 | 0.038229 |   0.051842 |   0.050404 |    0.064145 |     0.048539 |   0.043137 |   0.124024 |    0.083659 |
      |  5 |            5 |      0 | 0.043567 |   0.041053 |   0.059442 |    0.056602 |     0.033751 |   0.046628 |   0.055844 |    0.049585 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_asymmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.21251  |  -0.063509 |  -0.067494 |   -0.003854 |    -0.045436 |  -0.047771 |  -0.047025 |   -0.030197 |
      |  2 |            2 | 2.20594 | -0.730407 |  -0.060075 |  -0.294205 |    0.013897 |    -0.05219  |  -0.033113 |  -0.02998  |   -0.043035 |
      |  3 |            3 | 2.20594 | -0.308782 |   0.523717 |   0.255097 |    0.055291 |     0.065261 |   1.13555  |   0.075917 |    0.145116 |
      |  4 |            4 | 2.20594 |  0.721655 |  -0.214409 |  -0.005392 |    0.040857 |     0.010087 |  -0.156197 |   0.016794 |    0.063927 |
      |  5 |            5 | 2.20594 |  0.112722 |  -0.070538 |  -0.022842 |    0.001538 |     0.068518 |   0.006122 |   0.011149 |    0.027472 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.000459 |   0.002055 |   0.002017 |    0.003475 |     0.006585 |   0.003667 |   0.004442 |    0.007353 |
      |  2 |            2 |      0 | 0.001077 |   0.004815 |   0.004732 |    0.006507 |     0.011707 |   0.006179 |   0.009148 |    0.012517 |
      |  3 |            3 |      0 | 0.002262 |   0.010661 |   0.009945 |    0.010507 |     0.019969 |   0.012671 |   0.011952 |    0.023151 |
      |  4 |            4 |      0 | 0.00119  |   0.005639 |   0.005229 |    0.00451  |     0.007395 |   0.006343 |   0.003823 |    0.009702 |
      |  5 |            5 |      0 | 0.000505 |   0.002552 |   0.002219 |    0.00628  |     0.005552 |   0.006983 |   0.005514 |    0.008031 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.833239 |  -0.00685  |  -0.360575 |    0.004466 |    -0.097876 |  -0.076885 |  -0.076219 |   -0.07062  |
      |  2 |            2 | 2.20594 | -0.818478 |  -0.019085 |  -0.24768  |   -0.078028 |    -0.053456 |  -0.009557 |   0.014487 |   -0.01731  |
      |  3 |            3 | 2.20594 |  0.465205 |   0.592573 |  -0.147692 |   -0.001813 |     0.033868 |   0.847237 |   0.011282 |    0.14651  |
      |  4 |            4 | 2.20594 |  0.273884 |  -0.041331 |   0.178216 |    0.085273 |     0.019923 |  -0.178807 |   0.083692 |    0.056473 |
      |  5 |            5 | 2.20594 | -0.335658 |  -0.061633 |   0.057132 |    0.116002 |     0.148628 |   0.030318 |   0.071498 |    0.107856 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.027692 |   0.034756 |   0.055687 |    0.05152  |     0.06114  |   0.020118 |   0.060273 |    0.057851 |
      |  2 |            2 |      0 | 0.021748 |   0.023264 |   0.028998 |    0.03918  |     0.039984 |   0.016685 |   0.029734 |    0.034596 |
      |  3 |            3 |      0 | 0.026905 |   0.02816  |   0.037607 |    0.031495 |     0.038883 |   0.020356 |   0.040093 |    0.03154  |
      |  4 |            4 |      0 | 0.012883 |   0.023788 |   0.017081 |    0.00958  |     0.020667 |   0.009138 |   0.016122 |    0.012872 |
      |  5 |            5 |      0 | 0.021935 |   0.024848 |   0.041232 |    0.04063  |     0.031812 |   0.01875  |   0.051633 |    0.041347 |
    ''',
  })
# ---
